feat: 4.4 /freeHands usecase, handler with tests, added field in getFreeHandsBtnAv
