# api/manager.v1.swagger.yml
@@ -21,6 +21,19 @@ paths:
               schema:
                 $ref: "#/components/schemas/GetFreeHandsBtnAvailabilityResponse"
 
+  /freeHands:
+    post:
+      description: Signal than manager is free for resolve problems
+      parameters:
+        - $ref: "#/components/parameters/XRequestIDHeader"
+      responses:
+        '200':
+          description: Result of set manager as free
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FreeHandsResponse"
+
 
 security:
   - bearerAuth: [ ]
@@ -47,6 +60,14 @@ components:
   schemas:
     # Common.
 
+    FreeHandsResponse:
+      properties:
+        data:
+          type: string
+          nullable: true
+        error:
+          $ref: "#/components/schemas/Error"
+
     GetFreeHandsBtnAvailabilityResponse:
       properties:
         data:
@@ -55,9 +76,11 @@ components:
           $ref: "#/components/schemas/Error"
 
     GetFreeHandsBtnAvailability:
-      required: [ available ]
+      required: [ available, inPool ]
       properties:
         available:
+          type: boolean
+        inPool:
           type: boolean
 
     Error:
@@ -73,4 +96,8 @@ components:
     ErrorCode:
       type: integer
       description: contains HTTP error codes and specific business logic error codes (the last must be >= 1000).
+      enum:
+        - 5000
+      x-enum-varnames:
+        - ErrorCodeManagerOverloaded
       minimum: 400
